bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u16.rs
use bitbybit::bitfield;

#[bitfield(u16, default = 0)]
struct Test {
    #[bit(16, rw)]
    field: bool,
}

fn main() {}
